--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     #navbar {
       position: fixed;
       top: 0;
-      left: 0;
+      right: 0px;
     }
 
       @media (min-widht: 600px) {
@@ -23,7 +23,10 @@
     </style>
   </head>
   <body>
-    <header>
+    <header id="main-header">
+      <div class="logo-container">
+        <img src="" alt="" class="logo">
+      </div>
       <nav id="navbar">
         <ul>
           <li><a href="#welcome" class="nav-link">welcome</a></li>
@@ -37,7 +40,7 @@
 
     <main>
       <section id="welcome-section">
-        <h1>Welcome to my personal site</h1>
+        <h1 class="main-title">Welcome to my personal site</h1>
       </section>
 
       <section id="projects">
