Blog section added. Colours added

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </div>
       <nav id="navbar">
         <ul>
-          <li><a href="#welcome" class="nav-link">welcome</a></li>
+          <li><a href="#welcome-section" class="nav-link">welcome</a></li>
           <li><a href="#projects" class="nav-link">projects</a></li>
-          <li><a href="#also" class="nav-link">also</a></li>
+          <li><a href="#blog" class="nav-link">blog</a></li>
           <li><a href="https://github.com/joeldevel" class="nav-link" id="profile-link" target="_blank">my profile</a></li>
 
         </ul>
@@ -43,7 +43,7 @@
         <h1 class="main-title">Welcome to my personal site</h1>
       </section>
 
-      <section id="projects">
+      <section id="projects" class="row-section">
         <article class="project-card">
           <div>
             <a href="https://github.com/joeldevel/build-a-landing-page" class="project-tile"></a>
@@ -69,6 +69,27 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
           <div class="project-title"></div>
+        </article>
+      </section>
+
+      <h2 class="sub-title">Blog</h2>
+      <section id="blog" class="blog-entries-container">
+        <article class="blog-entry">
+          <h3 class="blog-entry__title">How to ...</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam corporis, dolorum labore maxime mollitia repellat earum natus dolorem, voluptas maiores velit nesciunt in saepe quidem iusto aliquam nulla praesentium beatae!</p>
+          <a href="#" class="btn blog-entry__read-more">Read more</a>
+        </article>
+
+        <article class="blog-entry">
+          <h3 class="blog-entry__title">How to ...</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam corporis, dolorum labore maxime mollitia repellat earum natus dolorem, voluptas maiores velit nesciunt in saepe quidem iusto aliquam nulla praesentium beatae!</p>
+          <a href="#" class="btn blog-entry__read-more">Read more</a>
+        </article>
+
+        <article class="blog-entry">
+          <h3 class="blog-entry__title">How to ...</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam corporis, dolorum labore maxime mollitia repellat earum natus dolorem, voluptas maiores velit nesciunt in saepe quidem iusto aliquam nulla praesentium beatae!</p>
+          <a href="#" class="btn blog-entry__read-more">Read more</a>
         </article>
       </section>
     </main>
