Working on the welcome section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 
     <main>
       <section id="welcome-section">
-        <h1 class="main-title">Welcome to my personal site</h1>
+        <h1 class="main-title">Welcome to my personal site
+          <span class="tagline">
+            I am ... a front end developer
+          </span>
+        </h1>
       </section>
 
       <section id="projects" class="row-section">
