--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
 
     <main>
       <section id="welcome-section">
-        <h1 class="main-title">Welcome to my personal site
+        <h1 class="main-title">
           <span class="tagline">
             I am ... a front end developer
+          </span>
+          <span class="watch">
+            Watch my projects! &darr;
           </span>
         </h1>
       </section>
