navbar does not overlaps sections.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
           <span class="tagline">
             I am ... a front end developer
           </span>
+        </h1>
+        <a href="#projects">
           <span class="watch">
             Watch my projects! &darr;
           </span>
-        </h1>
+        </a>
       </section>
 
       <section id="projects" class="row-section">
@@ -104,5 +106,7 @@
       <p>&copy;2030</p>
     </footer>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <script type="text/javascript">
+    </script>
   </body>
 </html>
