Projects section: imgs and hover effect.

--- a/index.html
+++ b/index.html
@@ -55,29 +55,35 @@
       <section id="projects" class="row-section">
         <article class="project-card">
           <div>
-            <a href="https://github.com/joeldevel/build-a-landing-page" class="project-tile"></a>
-            <img src="https://picsum.photos/100" alt="project">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="hidden-text">view code</p>
+            <a href="https://github.com/joeldevel/build-a-landing-page" target="_blank">
+              <img src="./img/fcc-landing.png" alt="project" class="project-img">
+                <span class="project-title">A landing page</span>
+            </a>
+            <p></p>
           </div>
-          <div class="project-title"></div>
         </article>
 
         <article class="project-card">
           <div>
-            <a href="https://github.com/joeldevel/build-a-landing-page" class="project-tile"></a>
-            <img src="https://picsum.photos/100" alt="project">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="hidden-text">view code</p>
+            <a href="https://github.com/joeldevel/FCC-tribute" target="_blank">
+              <img src="./img/fcc-tribute.png" alt="project" class="project-img">
+                <span class="project-title">A tribute page</span>
+            </a>
+            <ul></ul>
           </div>
-          <div class="project-title"></div>
         </article>
 
         <article class="project-card">
           <div>
-            <a href="https://github.com/joeldevel/build-a-landing-page" class="project-tile"></a>
-            <img src="https://picsum.photos/100" alt="project">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="hidden-text">view code</p>
+            <a href="https://github.com/joeldevel/build-a-technical-documentation-page" target="_blank">
+              <img src="./img/fcc-documentation.png" alt="project" class="project-img">
+              <span class="project-title">A documentation page</span>
+            </a>
+            <p></p>
           </div>
-          <div class="project-title"></div>
         </article>
       </section>
 
