--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
       <h2 class="sub-title">Blog</h2>
       <section id="blog" class="blog-entries-container">
         <article class="blog-entry">
-          <h3 class="blog-entry__title">How to ...</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam corporis, dolorum labore maxime mollitia repellat earum natus dolorem, voluptas maiores velit nesciunt in saepe quidem iusto aliquam nulla praesentium beatae!</p>
+          <h3 class="blog-entry__title">JavaScript data types</h3>
+          <p class="blog-entry-excerpt">Yes, another series on another programming language. This is the first one, but the idea is to cover OOP in JS . </p>
           <a href="#" class="btn blog-entry__read-more">Read more</a>
         </article>
 
         <article class="blog-entry">
-          <h3 class="blog-entry__title">How to ...</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam corporis, dolorum labore maxime mollitia repellat earum natus dolorem, voluptas maiores velit nesciunt in saepe quidem iusto aliquam nulla praesentium beatae!</p>
+          <h3 class="blog-entry__title">php OOP</h3>
+          <p class="blog-entry-excerpt">Let’s see how to create classes and apply inheritance in php. Minimum knowledge A class is an abstraction . </p>
           <a href="#" class="btn blog-entry__read-more">Read more</a>
         </article>
 
         <article class="blog-entry">
-          <h3 class="blog-entry__title">How to ...</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam corporis, dolorum labore maxime mollitia repellat earum natus dolorem, voluptas maiores velit nesciunt in saepe quidem iusto aliquam nulla praesentium beatae!</p>
+          <h3 class="blog-entry__title">Dynamic memory in C++</h3>
+          <p class="blog-entry-excerpt">In this article we are going to learn how to use memory that is not allocated during compile time .</p>
           <a href="#" class="btn blog-entry__read-more">Read more</a>
         </article>
       </section>
