--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
       <h2 class="sub-title">projects</h2>
 
-      <section id="projects" class="row-section">
-        <article class="project-card">
+      <section id="projects" class="row-section ">
+        <article class="project-card project-tile">
           <div>
             <p class="hidden-text">view code</p>
             <a href="https://github.com/joeldevel/build-a-landing-page" target="_blank">
@@ -66,7 +66,7 @@
           </div>
         </article>
 
-        <article class="project-card">
+        <article class="project-card project-tile">
           <div>
             <p class="hidden-text">view code</p>
             <a href="https://github.com/joeldevel/FCC-tribute" target="_blank">
@@ -77,7 +77,7 @@
           </div>
         </article>
 
-        <article class="project-card">
+        <article class="project-card project-tile">
           <div>
             <p class="hidden-text">view code</p>
             <a href="https://github.com/joeldevel/build-a-technical-documentation-page" target="_blank">
